// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateKicadProject > jlcpcb advanced 2-layer matches its snapshot 1`] = `
{
  "blinky/blinky.kicad_dru": "(version 1)
(rule "JLCPCB: smallest hole"
	(constraint hole_size (min 0.15mm)))
(rule "JLCPCB: via diameter"
	(constraint via_diameter (min 0.25mm))
	(condition "A.Type == 'Via'"))
(rule "JLCPCB: via annular ring"
	(constraint annular_width (min 0.05mm))
	(condition "A.Type == 'Via'"))
(rule "JLCPCB: plated hole annular ring"
	(constraint annular_width (min 0.25mm))
	(condition "A.Type == 'Pad' && A.Pad_Type == 'Through-hole'"))
(rule "JLCPCB: hole to hole"
	(constraint hole_to_hole (min 0.2mm)))
(rule "JLCPCB: pad hole to pad hole"
	(constraint hole_to_hole (min 0.45mm))
	(condition "A.Type == 'Pad' && B.Type == 'Pad'"))
(rule "JLCPCB: plated hole to track"
	(constraint hole_clearance (min 0.35mm))
	(condition "A.Type == 'Pad' && A.Pad_Type == 'Through-hole' && B.Type == 'Track'"))
(rule "JLCPCB: copper to board edge"
	(constraint edge_clearance (min 0.2mm)))
(rule "JLCPCB: silkscreen text height"
	(constraint text_height (min 1mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
(rule "JLCPCB: silkscreen text thickness"
	(constraint text_thickness (min 0.15mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
",
  "blinky/blinky.kicad_pcb": "(kicad_pcb
	(version 20241229)
	(generator "pcbnew")
	(generator_version "9.0")
	(general
		(thickness 1.6)
		(legacy_teardrops no)
	)
	(paper "A4")
	(layers
		(0 "F.Cu" signal)
		(2 "B.Cu" signal)
		(9 "F.Adhes" user "F.Adhesive")
		(11 "B.Adhes" user "B.Adhesive")
		(13 "F.Paste" user)
		(15 "B.Paste" user)
		(5 "F.SilkS" user "F.Silkscreen")
		(7 "B.SilkS" user "B.Silkscreen")
		(1 "F.Mask" user)
		(3 "B.Mask" user)
		(17 "Dwgs.User" user "User.Drawings")
		(19 "Cmts.User" user "User.Comments")
		(21 "Eco1.User" user "User.Eco1")
		(23 "Eco2.User" user "User.Eco2")
		(25 "Edge.Cuts" user)
		(27 "Margin" user)
		(31 "F.CrtYd" user "F.Courtyard")
		(29 "B.CrtYd" user "B.Courtyard")
		(35 "F.Fab" user)
		(33 "B.Fab" user)
	)
	(setup
		(stackup
			(layer "F.SilkS"
				(type "Top Silk Screen")
			)
			(layer "F.Paste"
				(type "Top Solder Paste")
			)
			(layer "F.Mask"
				(type "Top Solder Mask")
				(thickness 0.01)
			)
			(layer "F.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 1"
				(type "core")
				(thickness 1.51)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "B.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "B.Mask"
				(type "Bottom Solder Mask")
				(thickness 0.01)
			)
			(layer "B.Paste"
				(type "Bottom Solder Paste")
			)
			(layer "B.SilkS"
				(type "Bottom Silk Screen")
			)
			(copper_finish "None")
			(dielectric_constraints no)
		)
		(pad_to_mask_clearance 0)
		(solder_mask_min_width 0.1)
		(allow_soldermask_bridges_in_footprints no)
		(tenting front back)
	)
	(net 0 "")
)
",
  "blinky/blinky.kicad_pro": "{
  "board": {
    "design_settings": {
      "meta": {
        "version": 2
      },
      "rules": {
        "min_clearance": 0.1,
        "min_track_width": 0.1,
        "min_via_annular_width": 0.05,
        "min_via_diameter": 0.25,
        "min_through_hole_diameter": 0.15,
        "min_hole_to_hole": 0.2,
        "min_hole_clearance": 0.2,
        "min_copper_edge_clearance": 0.2,
        "min_silk_clearance": 0.15,
        "min_text_height": 1,
        "min_text_thickness": 0.15
      },
      "track_widths": [
        0
      ],
      "via_dimensions": [
        {
          "diameter": 0,
          "drill": 0
        }
      ]
    }
  },
  "meta": {
    "filename": "blinky.kicad_pro",
    "version": 3
  },
  "net_settings": {
    "classes": [
      {
        "name": "Default",
        "priority": 2147483647,
        "clearance": 0.2,
        "track_width": 0.2,
        "via_diameter": 0.6,
        "via_drill": 0.3,
        "microvia_diameter": 0.3,
        "microvia_drill": 0.1,
        "diff_pair_width": 0.2,
        "diff_pair_gap": 0.25,
        "diff_pair_via_gap": 0.25,
        "wire_width": 6,
        "bus_width": 12,
        "line_style": 0
      }
    ],
    "meta": {
      "version": 5
    }
  },
  "text_variables": {
    "FAB": "JLCPCB",
    "FAB_PROFILE": "jlcpcb v2 (advanced)"
  }
}
",
  "blinky/blinky.kicad_sch": "(kicad_sch
	(version 20250114)
	(generator "eeschema")
	(generator_version "9.0")
	(uuid "47ee5079-8699-4afb-9512-2ca5212077e8")
	(paper "A4")
	(title_block
		(title "blinky")
		(date "2026-10-05")
		(rev "A")
		(comment 1 "JLCPCB Advanced rules, 2 layers")
	)
	(lib_symbols)
	(sheet_instances
		(path "/"
			(page "1")
		)
	)
)
",
}
`;

exports[`generateKicadProject > jlcpcb advanced 4-layer matches its snapshot 1`] = `
{
  "blinky/blinky.kicad_dru": "(version 1)
(rule "JLCPCB: smallest hole"
	(constraint hole_size (min 0.15mm)))
(rule "JLCPCB: via diameter"
	(constraint via_diameter (min 0.25mm))
	(condition "A.Type == 'Via'"))
(rule "JLCPCB: via annular ring"
	(constraint annular_width (min 0.05mm))
	(condition "A.Type == 'Via'"))
(rule "JLCPCB: plated hole annular ring"
	(constraint annular_width (min 0.2mm))
	(condition "A.Type == 'Pad' && A.Pad_Type == 'Through-hole'"))
(rule "JLCPCB: hole to hole"
	(constraint hole_to_hole (min 0.2mm)))
(rule "JLCPCB: pad hole to pad hole"
	(constraint hole_to_hole (min 0.45mm))
	(condition "A.Type == 'Pad' && B.Type == 'Pad'"))
(rule "JLCPCB: plated hole to track"
	(constraint hole_clearance (min 0.35mm))
	(condition "A.Type == 'Pad' && A.Pad_Type == 'Through-hole' && B.Type == 'Track'"))
(rule "JLCPCB: copper to board edge"
	(constraint edge_clearance (min 0.2mm)))
(rule "JLCPCB: silkscreen text height"
	(constraint text_height (min 1mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
(rule "JLCPCB: silkscreen text thickness"
	(constraint text_thickness (min 0.15mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
",
  "blinky/blinky.kicad_pcb": "(kicad_pcb
	(version 20241229)
	(generator "pcbnew")
	(generator_version "9.0")
	(general
		(thickness 1.6062)
		(legacy_teardrops no)
	)
	(paper "A4")
	(layers
		(0 "F.Cu" signal)
		(4 "In1.Cu" signal)
		(6 "In2.Cu" signal)
		(2 "B.Cu" signal)
		(9 "F.Adhes" user "F.Adhesive")
		(11 "B.Adhes" user "B.Adhesive")
		(13 "F.Paste" user)
		(15 "B.Paste" user)
		(5 "F.SilkS" user "F.Silkscreen")
		(7 "B.SilkS" user "B.Silkscreen")
		(1 "F.Mask" user)
		(3 "B.Mask" user)
		(17 "Dwgs.User" user "User.Drawings")
		(19 "Cmts.User" user "User.Comments")
		(21 "Eco1.User" user "User.Eco1")
		(23 "Eco2.User" user "User.Eco2")
		(25 "Edge.Cuts" user)
		(27 "Margin" user)
		(31 "F.CrtYd" user "F.Courtyard")
		(29 "B.CrtYd" user "B.Courtyard")
		(35 "F.Fab" user)
		(33 "B.Fab" user)
	)
	(setup
		(stackup
			(layer "F.SilkS"
				(type "Top Silk Screen")
			)
			(layer "F.Paste"
				(type "Top Solder Paste")
			)
			(layer "F.Mask"
				(type "Top Solder Mask")
				(thickness 0.01)
			)
			(layer "F.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 1"
				(type "prepreg")
				(thickness 0.2104)
				(material "7628")
				(epsilon_r 4.4)
			)
			(layer "In1.Cu"
				(type "copper")
				(thickness 0.0152)
			)
			(layer "dielectric 2"
				(type "core")
				(thickness 1.065)
				(material "FR4 core")
				(epsilon_r 4.6)
			)
			(layer "In2.Cu"
				(type "copper")
				(thickness 0.0152)
			)
			(layer "dielectric 3"
				(type "prepreg")
				(thickness 0.2104)
				(material "7628")
				(epsilon_r 4.4)
			)
			(layer "B.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "B.Mask"
				(type "Bottom Solder Mask")
				(thickness 0.01)
			)
			(layer "B.Paste"
				(type "Bottom Solder Paste")
			)
			(layer "B.SilkS"
				(type "Bottom Silk Screen")
			)
			(copper_finish "None")
			(dielectric_constraints no)
		)
		(pad_to_mask_clearance 0)
		(solder_mask_min_width 0.1)
		(allow_soldermask_bridges_in_footprints no)
		(tenting front back)
	)
	(net 0 "")
)
",
  "blinky/blinky.kicad_pro": "{
  "board": {
    "design_settings": {
      "meta": {
        "version": 2
      },
      "rules": {
        "min_clearance": 0.09,
        "min_track_width": 0.09,
        "min_via_annular_width": 0.05,
        "min_via_diameter": 0.25,
        "min_through_hole_diameter": 0.15,
        "min_hole_to_hole": 0.2,
        "min_hole_clearance": 0.2,
        "min_copper_edge_clearance": 0.2,
        "min_silk_clearance": 0.15,
        "min_text_height": 1,
        "min_text_thickness": 0.15
      },
      "track_widths": [
        0
      ],
      "via_dimensions": [
        {
          "diameter": 0,
          "drill": 0
        }
      ]
    }
  },
  "meta": {
    "filename": "blinky.kicad_pro",
    "version": 3
  },
  "net_settings": {
    "classes": [
      {
        "name": "Default",
        "priority": 2147483647,
        "clearance": 0.2,
        "track_width": 0.2,
        "via_diameter": 0.6,
        "via_drill": 0.3,
        "microvia_diameter": 0.3,
        "microvia_drill": 0.1,
        "diff_pair_width": 0.2,
        "diff_pair_gap": 0.25,
        "diff_pair_via_gap": 0.25,
        "wire_width": 6,
        "bus_width": 12,
        "line_style": 0
      }
    ],
    "meta": {
      "version": 5
    }
  },
  "text_variables": {
    "FAB": "JLCPCB",
    "FAB_PROFILE": "jlcpcb v2 (advanced)"
  }
}
",
  "blinky/blinky.kicad_sch": "(kicad_sch
	(version 20250114)
	(generator "eeschema")
	(generator_version "9.0")
	(uuid "47ee5079-8699-4afb-9512-2ca5212077e8")
	(paper "A4")
	(title_block
		(title "blinky")
		(date "2026-10-05")
		(rev "A")
		(comment 1 "JLCPCB Advanced rules, 4 layers")
	)
	(lib_symbols)
	(sheet_instances
		(path "/"
			(page "1")
		)
	)
)
",
}
`;

exports[`generateKicadProject > jlcpcb advanced 6-layer matches its snapshot 1`] = `
{
  "blinky/blinky.kicad_dru": "(version 1)
(rule "JLCPCB: smallest hole"
	(constraint hole_size (min 0.15mm)))
(rule "JLCPCB: via diameter"
	(constraint via_diameter (min 0.25mm))
	(condition "A.Type == 'Via'"))
(rule "JLCPCB: via annular ring"
	(constraint annular_width (min 0.05mm))
	(condition "A.Type == 'Via'"))
(rule "JLCPCB: plated hole annular ring"
	(constraint annular_width (min 0.2mm))
	(condition "A.Type == 'Pad' && A.Pad_Type == 'Through-hole'"))
(rule "JLCPCB: hole to hole"
	(constraint hole_to_hole (min 0.2mm)))
(rule "JLCPCB: pad hole to pad hole"
	(constraint hole_to_hole (min 0.45mm))
	(condition "A.Type == 'Pad' && B.Type == 'Pad'"))
(rule "JLCPCB: plated hole to track"
	(constraint hole_clearance (min 0.35mm))
	(condition "A.Type == 'Pad' && A.Pad_Type == 'Through-hole' && B.Type == 'Track'"))
(rule "JLCPCB: copper to board edge"
	(constraint edge_clearance (min 0.2mm)))
(rule "JLCPCB: silkscreen text height"
	(constraint text_height (min 1mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
(rule "JLCPCB: silkscreen text thickness"
	(constraint text_thickness (min 0.15mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
",
  "blinky/blinky.kicad_pcb": "(kicad_pcb
	(version 20241229)
	(generator "pcbnew")
	(generator_version "9.0")
	(general
		(thickness 1.566)
		(legacy_teardrops no)
	)
	(paper "A4")
	(layers
		(0 "F.Cu" signal)
		(4 "In1.Cu" signal)
		(6 "In2.Cu" signal)
		(8 "In3.Cu" signal)
		(10 "In4.Cu" signal)
		(2 "B.Cu" signal)
		(9 "F.Adhes" user "F.Adhesive")
		(11 "B.Adhes" user "B.Adhesive")
		(13 "F.Paste" user)
		(15 "B.Paste" user)
		(5 "F.SilkS" user "F.Silkscreen")
		(7 "B.SilkS" user "B.Silkscreen")
		(1 "F.Mask" user)
		(3 "B.Mask" user)
		(17 "Dwgs.User" user "User.Drawings")
		(19 "Cmts.User" user "User.Comments")
		(21 "Eco1.User" user "User.Eco1")
		(23 "Eco2.User" user "User.Eco2")
		(25 "Edge.Cuts" user)
		(27 "Margin" user)
		(31 "F.CrtYd" user "F.Courtyard")
		(29 "B.CrtYd" user "B.Courtyard")
		(35 "F.Fab" user)
		(33 "B.Fab" user)
	)
	(setup
		(stackup
			(layer "F.SilkS"
				(type "Top Silk Screen")
			)
			(layer "F.Paste"
				(type "Top Solder Paste")
			)
			(layer "F.Mask"
				(type "Top Solder Mask")
				(thickness 0.01)
			)
			(layer "F.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 1"
				(type "prepreg")
				(thickness 0.0994)
				(material "3313")
				(epsilon_r 4.1)
			)
			(layer "In1.Cu"
				(type "copper")
				(thickness 0.0152)
			)
			(layer "dielectric 2"
				(type "core")
				(thickness 0.55)
				(material "FR4 core")
				(epsilon_r 4.6)
			)
			(layer "In2.Cu"
				(type "copper")
				(thickness 0.0152)
			)
			(layer "dielectric 3"
				(type "prepreg")
				(thickness 0.1164)
				(material "2116")
				(epsilon_r 4.16)
			)
			(layer "In3.Cu"
				(type "copper")
				(thickness 0.0152)
			)
			(layer "dielectric 4"
				(type "core")
				(thickness 0.55)
				(material "FR4 core")
				(epsilon_r 4.6)
			)
			(layer "In4.Cu"
				(type "copper")
				(thickness 0.0152)
			)
			(layer "dielectric 5"
				(type "prepreg")
				(thickness 0.0994)
				(material "3313")
				(epsilon_r 4.1)
			)
			(layer "B.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "B.Mask"
				(type "Bottom Solder Mask")
				(thickness 0.01)
			)
			(layer "B.Paste"
				(type "Bottom Solder Paste")
			)
			(layer "B.SilkS"
				(type "Bottom Silk Screen")
			)
			(copper_finish "None")
			(dielectric_constraints no)
		)
		(pad_to_mask_clearance 0)
		(solder_mask_min_width 0.1)
		(allow_soldermask_bridges_in_footprints no)
		(tenting front back)
	)
	(net 0 "")
)
",
  "blinky/blinky.kicad_pro": "{
  "board": {
    "design_settings": {
      "meta": {
        "version": 2
      },
      "rules": {
        "min_clearance": 0.09,
        "min_track_width": 0.09,
        "min_via_annular_width": 0.05,
        "min_via_diameter": 0.25,
        "min_through_hole_diameter": 0.15,
        "min_hole_to_hole": 0.2,
        "min_hole_clearance": 0.2,
        "min_copper_edge_clearance": 0.2,
        "min_silk_clearance": 0.15,
        "min_text_height": 1,
        "min_text_thickness": 0.15
      },
      "track_widths": [
        0
      ],
      "via_dimensions": [
        {
          "diameter": 0,
          "drill": 0
        }
      ]
    }
  },
  "meta": {
    "filename": "blinky.kicad_pro",
    "version": 3
  },
  "net_settings": {
    "classes": [
      {
        "name": "Default",
        "priority": 2147483647,
        "clearance": 0.2,
        "track_width": 0.2,
        "via_diameter": 0.6,
        "via_drill": 0.3,
        "microvia_diameter": 0.3,
        "microvia_drill": 0.1,
        "diff_pair_width": 0.2,
        "diff_pair_gap": 0.25,
        "diff_pair_via_gap": 0.25,
        "wire_width": 6,
        "bus_width": 12,
        "line_style": 0
      }
    ],
    "meta": {
      "version": 5
    }
  },
  "text_variables": {
    "FAB": "JLCPCB",
    "FAB_PROFILE": "jlcpcb v2 (advanced)"
  }
}
",
  "blinky/blinky.kicad_sch": "(kicad_sch
	(version 20250114)
	(generator "eeschema")
	(generator_version "9.0")
	(uuid "47ee5079-8699-4afb-9512-2ca5212077e8")
	(paper "A4")
	(title_block
		(title "blinky")
		(date "2026-10-05")
		(rev "A")
		(comment 1 "JLCPCB Advanced rules, 6 layers")
	)
	(lib_symbols)
	(sheet_instances
		(path "/"
			(page "1")
		)
	)
)
",
}
`;

exports[`generateKicadProject > jlcpcb standard 2-layer matches its snapshot 1`] = `
{
  "blinky/blinky.kicad_dru": "(version 1)
(rule "JLCPCB: smallest hole"
	(constraint hole_size (min 0.3mm)))
(rule "JLCPCB: via diameter"
	(constraint via_diameter (min 0.4mm))
	(condition "A.Type == 'Via'"))
(rule "JLCPCB: via annular ring"
	(constraint annular_width (min 0.05mm))
	(condition "A.Type == 'Via'"))
(rule "JLCPCB: plated hole annular ring"
	(constraint annular_width (min 0.25mm))
	(condition "A.Type == 'Pad' && A.Pad_Type == 'Through-hole'"))
(rule "JLCPCB: hole to hole"
	(constraint hole_to_hole (min 0.2mm)))
(rule "JLCPCB: pad hole to pad hole"
	(constraint hole_to_hole (min 0.45mm))
	(condition "A.Type == 'Pad' && B.Type == 'Pad'"))
(rule "JLCPCB: plated hole to track"
	(constraint hole_clearance (min 0.35mm))
	(condition "A.Type == 'Pad' && A.Pad_Type == 'Through-hole' && B.Type == 'Track'"))
(rule "JLCPCB: copper to board edge"
	(constraint edge_clearance (min 0.2mm)))
(rule "JLCPCB: silkscreen text height"
	(constraint text_height (min 1mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
(rule "JLCPCB: silkscreen text thickness"
	(constraint text_thickness (min 0.15mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
",
  "blinky/blinky.kicad_pcb": "(kicad_pcb
	(version 20241229)
	(generator "pcbnew")
	(generator_version "9.0")
	(general
		(thickness 1.6)
		(legacy_teardrops no)
	)
	(paper "A4")
	(layers
		(0 "F.Cu" signal)
		(2 "B.Cu" signal)
		(9 "F.Adhes" user "F.Adhesive")
		(11 "B.Adhes" user "B.Adhesive")
		(13 "F.Paste" user)
		(15 "B.Paste" user)
		(5 "F.SilkS" user "F.Silkscreen")
		(7 "B.SilkS" user "B.Silkscreen")
		(1 "F.Mask" user)
		(3 "B.Mask" user)
		(17 "Dwgs.User" user "User.Drawings")
		(19 "Cmts.User" user "User.Comments")
		(21 "Eco1.User" user "User.Eco1")
		(23 "Eco2.User" user "User.Eco2")
		(25 "Edge.Cuts" user)
		(27 "Margin" user)
		(31 "F.CrtYd" user "F.Courtyard")
		(29 "B.CrtYd" user "B.Courtyard")
		(35 "F.Fab" user)
		(33 "B.Fab" user)
	)
	(setup
		(stackup
			(layer "F.SilkS"
				(type "Top Silk Screen")
			)
			(layer "F.Paste"
				(type "Top Solder Paste")
			)
			(layer "F.Mask"
				(type "Top Solder Mask")
				(thickness 0.01)
			)
			(layer "F.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 1"
				(type "core")
				(thickness 1.51)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "B.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "B.Mask"
				(type "Bottom Solder Mask")
				(thickness 0.01)
			)
			(layer "B.Paste"
				(type "Bottom Solder Paste")
			)
			(layer "B.SilkS"
				(type "Bottom Silk Screen")
			)
			(copper_finish "None")
			(dielectric_constraints no)
		)
		(pad_to_mask_clearance 0)
		(solder_mask_min_width 0.1)
		(allow_soldermask_bridges_in_footprints no)
		(tenting front back)
	)
	(net 0 "")
)
",
  "blinky/blinky.kicad_pro": "{
  "board": {
    "design_settings": {
      "meta": {
        "version": 2
      },
      "rules": {
        "min_clearance": 0.1,
        "min_track_width": 0.1,
        "min_via_annular_width": 0.05,
        "min_via_diameter": 0.4,
        "min_through_hole_diameter": 0.3,
        "min_hole_to_hole": 0.2,
        "min_hole_clearance": 0.2,
        "min_copper_edge_clearance": 0.2,
        "min_silk_clearance": 0.15,
        "min_text_height": 1,
        "min_text_thickness": 0.15
      },
      "track_widths": [
        0
      ],
      "via_dimensions": [
        {
          "diameter": 0,
          "drill": 0
        }
      ]
    }
  },
  "meta": {
    "filename": "blinky.kicad_pro",
    "version": 3
  },
  "net_settings": {
    "classes": [
      {
        "name": "Default",
        "priority": 2147483647,
        "clearance": 0.2,
        "track_width": 0.2,
        "via_diameter": 0.6,
        "via_drill": 0.3,
        "microvia_diameter": 0.3,
        "microvia_drill": 0.1,
        "diff_pair_width": 0.2,
        "diff_pair_gap": 0.25,
        "diff_pair_via_gap": 0.25,
        "wire_width": 6,
        "bus_width": 12,
        "line_style": 0
      }
    ],
    "meta": {
      "version": 5
    }
  },
  "text_variables": {
    "FAB": "JLCPCB",
    "FAB_PROFILE": "jlcpcb v2 (standard)"
  }
}
",
  "blinky/blinky.kicad_sch": "(kicad_sch
	(version 20250114)
	(generator "eeschema")
	(generator_version "9.0")
	(uuid "47ee5079-8699-4afb-9512-2ca5212077e8")
	(paper "A4")
	(title_block
		(title "blinky")
		(date "2026-10-05")
		(rev "A")
		(comment 1 "JLCPCB Standard rules, 2 layers")
	)
	(lib_symbols)
	(sheet_instances
		(path "/"
			(page "1")
		)
	)
)
",
}
`;

exports[`generateKicadProject > jlcpcb standard 4-layer matches its snapshot 1`] = `
{
  "blinky/blinky.kicad_dru": "(version 1)
(rule "JLCPCB: smallest hole"
	(constraint hole_size (min 0.3mm)))
(rule "JLCPCB: via diameter"
	(constraint via_diameter (min 0.4mm))
	(condition "A.Type == 'Via'"))
(rule "JLCPCB: via annular ring"
	(constraint annular_width (min 0.05mm))
	(condition "A.Type == 'Via'"))
(rule "JLCPCB: plated hole annular ring"
	(constraint annular_width (min 0.2mm))
	(condition "A.Type == 'Pad' && A.Pad_Type == 'Through-hole'"))
(rule "JLCPCB: hole to hole"
	(constraint hole_to_hole (min 0.2mm)))
(rule "JLCPCB: pad hole to pad hole"
	(constraint hole_to_hole (min 0.45mm))
	(condition "A.Type == 'Pad' && B.Type == 'Pad'"))
(rule "JLCPCB: plated hole to track"
	(constraint hole_clearance (min 0.35mm))
	(condition "A.Type == 'Pad' && A.Pad_Type == 'Through-hole' && B.Type == 'Track'"))
(rule "JLCPCB: copper to board edge"
	(constraint edge_clearance (min 0.2mm)))
(rule "JLCPCB: silkscreen text height"
	(constraint text_height (min 1mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
(rule "JLCPCB: silkscreen text thickness"
	(constraint text_thickness (min 0.15mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
",
  "blinky/blinky.kicad_pcb": "(kicad_pcb
	(version 20241229)
	(generator "pcbnew")
	(generator_version "9.0")
	(general
		(thickness 1.6062)
		(legacy_teardrops no)
	)
	(paper "A4")
	(layers
		(0 "F.Cu" signal)
		(4 "In1.Cu" signal)
		(6 "In2.Cu" signal)
		(2 "B.Cu" signal)
		(9 "F.Adhes" user "F.Adhesive")
		(11 "B.Adhes" user "B.Adhesive")
		(13 "F.Paste" user)
		(15 "B.Paste" user)
		(5 "F.SilkS" user "F.Silkscreen")
		(7 "B.SilkS" user "B.Silkscreen")
		(1 "F.Mask" user)
		(3 "B.Mask" user)
		(17 "Dwgs.User" user "User.Drawings")
		(19 "Cmts.User" user "User.Comments")
		(21 "Eco1.User" user "User.Eco1")
		(23 "Eco2.User" user "User.Eco2")
		(25 "Edge.Cuts" user)
		(27 "Margin" user)
		(31 "F.CrtYd" user "F.Courtyard")
		(29 "B.CrtYd" user "B.Courtyard")
		(35 "F.Fab" user)
		(33 "B.Fab" user)
	)
	(setup
		(stackup
			(layer "F.SilkS"
				(type "Top Silk Screen")
			)
			(layer "F.Paste"
				(type "Top Solder Paste")
			)
			(layer "F.Mask"
				(type "Top Solder Mask")
				(thickness 0.01)
			)
			(layer "F.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 1"
				(type "prepreg")
				(thickness 0.2104)
				(material "7628")
				(epsilon_r 4.4)
			)
			(layer "In1.Cu"
				(type "copper")
				(thickness 0.0152)
			)
			(layer "dielectric 2"
				(type "core")
				(thickness 1.065)
				(material "FR4 core")
				(epsilon_r 4.6)
			)
			(layer "In2.Cu"
				(type "copper")
				(thickness 0.0152)
			)
			(layer "dielectric 3"
				(type "prepreg")
				(thickness 0.2104)
				(material "7628")
				(epsilon_r 4.4)
			)
			(layer "B.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "B.Mask"
				(type "Bottom Solder Mask")
				(thickness 0.01)
			)
			(layer "B.Paste"
				(type "Bottom Solder Paste")
			)
			(layer "B.SilkS"
				(type "Bottom Silk Screen")
			)
			(copper_finish "None")
			(dielectric_constraints no)
		)
		(pad_to_mask_clearance 0)
		(solder_mask_min_width 0.1)
		(allow_soldermask_bridges_in_footprints no)
		(tenting front back)
	)
	(net 0 "")
)
",
  "blinky/blinky.kicad_pro": "{
  "board": {
    "design_settings": {
      "meta": {
        "version": 2
      },
      "rules": {
        "min_clearance": 0.09,
        "min_track_width": 0.09,
        "min_via_annular_width": 0.05,
        "min_via_diameter": 0.4,
        "min_through_hole_diameter": 0.3,
        "min_hole_to_hole": 0.2,
        "min_hole_clearance": 0.2,
        "min_copper_edge_clearance": 0.2,
        "min_silk_clearance": 0.15,
        "min_text_height": 1,
        "min_text_thickness": 0.15
      },
      "track_widths": [
        0
      ],
      "via_dimensions": [
        {
          "diameter": 0,
          "drill": 0
        }
      ]
    }
  },
  "meta": {
    "filename": "blinky.kicad_pro",
    "version": 3
  },
  "net_settings": {
    "classes": [
      {
        "name": "Default",
        "priority": 2147483647,
        "clearance": 0.2,
        "track_width": 0.2,
        "via_diameter": 0.6,
        "via_drill": 0.3,
        "microvia_diameter": 0.3,
        "microvia_drill": 0.1,
        "diff_pair_width": 0.2,
        "diff_pair_gap": 0.25,
        "diff_pair_via_gap": 0.25,
        "wire_width": 6,
        "bus_width": 12,
        "line_style": 0
      }
    ],
    "meta": {
      "version": 5
    }
  },
  "text_variables": {
    "FAB": "JLCPCB",
    "FAB_PROFILE": "jlcpcb v2 (standard)"
  }
}
",
  "blinky/blinky.kicad_sch": "(kicad_sch
	(version 20250114)
	(generator "eeschema")
	(generator_version "9.0")
	(uuid "47ee5079-8699-4afb-9512-2ca5212077e8")
	(paper "A4")
	(title_block
		(title "blinky")
		(date "2026-10-05")
		(rev "A")
		(comment 1 "JLCPCB Standard rules, 4 layers")
	)
	(lib_symbols)
	(sheet_instances
		(path "/"
			(page "1")
		)
	)
)
",
}
`;

exports[`generateKicadProject > jlcpcb standard 6-layer matches its snapshot 1`] = `
{
  "blinky/blinky.kicad_dru": "(version 1)
(rule "JLCPCB: smallest hole"
	(constraint hole_size (min 0.3mm)))
(rule "JLCPCB: via diameter"
	(constraint via_diameter (min 0.4mm))
	(condition "A.Type == 'Via'"))
(rule "JLCPCB: via annular ring"
	(constraint annular_width (min 0.05mm))
	(condition "A.Type == 'Via'"))
(rule "JLCPCB: plated hole annular ring"
	(constraint annular_width (min 0.2mm))
	(condition "A.Type == 'Pad' && A.Pad_Type == 'Through-hole'"))
(rule "JLCPCB: hole to hole"
	(constraint hole_to_hole (min 0.2mm)))
(rule "JLCPCB: pad hole to pad hole"
	(constraint hole_to_hole (min 0.45mm))
	(condition "A.Type == 'Pad' && B.Type == 'Pad'"))
(rule "JLCPCB: plated hole to track"
	(constraint hole_clearance (min 0.35mm))
	(condition "A.Type == 'Pad' && A.Pad_Type == 'Through-hole' && B.Type == 'Track'"))
(rule "JLCPCB: copper to board edge"
	(constraint edge_clearance (min 0.2mm)))
(rule "JLCPCB: silkscreen text height"
	(constraint text_height (min 1mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
(rule "JLCPCB: silkscreen text thickness"
	(constraint text_thickness (min 0.15mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
",
  "blinky/blinky.kicad_pcb": "(kicad_pcb
	(version 20241229)
	(generator "pcbnew")
	(generator_version "9.0")
	(general
		(thickness 1.566)
		(legacy_teardrops no)
	)
	(paper "A4")
	(layers
		(0 "F.Cu" signal)
		(4 "In1.Cu" signal)
		(6 "In2.Cu" signal)
		(8 "In3.Cu" signal)
		(10 "In4.Cu" signal)
		(2 "B.Cu" signal)
		(9 "F.Adhes" user "F.Adhesive")
		(11 "B.Adhes" user "B.Adhesive")
		(13 "F.Paste" user)
		(15 "B.Paste" user)
		(5 "F.SilkS" user "F.Silkscreen")
		(7 "B.SilkS" user "B.Silkscreen")
		(1 "F.Mask" user)
		(3 "B.Mask" user)
		(17 "Dwgs.User" user "User.Drawings")
		(19 "Cmts.User" user "User.Comments")
		(21 "Eco1.User" user "User.Eco1")
		(23 "Eco2.User" user "User.Eco2")
		(25 "Edge.Cuts" user)
		(27 "Margin" user)
		(31 "F.CrtYd" user "F.Courtyard")
		(29 "B.CrtYd" user "B.Courtyard")
		(35 "F.Fab" user)
		(33 "B.Fab" user)
	)
	(setup
		(stackup
			(layer "F.SilkS"
				(type "Top Silk Screen")
			)
			(layer "F.Paste"
				(type "Top Solder Paste")
			)
			(layer "F.Mask"
				(type "Top Solder Mask")
				(thickness 0.01)
			)
			(layer "F.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 1"
				(type "prepreg")
				(thickness 0.0994)
				(material "3313")
				(epsilon_r 4.1)
			)
			(layer "In1.Cu"
				(type "copper")
				(thickness 0.0152)
			)
			(layer "dielectric 2"
				(type "core")
				(thickness 0.55)
				(material "FR4 core")
				(epsilon_r 4.6)
			)
			(layer "In2.Cu"
				(type "copper")
				(thickness 0.0152)
			)
			(layer "dielectric 3"
				(type "prepreg")
				(thickness 0.1164)
				(material "2116")
				(epsilon_r 4.16)
			)
			(layer "In3.Cu"
				(type "copper")
				(thickness 0.0152)
			)
			(layer "dielectric 4"
				(type "core")
				(thickness 0.55)
				(material "FR4 core")
				(epsilon_r 4.6)
			)
			(layer "In4.Cu"
				(type "copper")
				(thickness 0.0152)
			)
			(layer "dielectric 5"
				(type "prepreg")
				(thickness 0.0994)
				(material "3313")
				(epsilon_r 4.1)
			)
			(layer "B.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "B.Mask"
				(type "Bottom Solder Mask")
				(thickness 0.01)
			)
			(layer "B.Paste"
				(type "Bottom Solder Paste")
			)
			(layer "B.SilkS"
				(type "Bottom Silk Screen")
			)
			(copper_finish "None")
			(dielectric_constraints no)
		)
		(pad_to_mask_clearance 0)
		(solder_mask_min_width 0.1)
		(allow_soldermask_bridges_in_footprints no)
		(tenting front back)
	)
	(net 0 "")
)
",
  "blinky/blinky.kicad_pro": "{
  "board": {
    "design_settings": {
      "meta": {
        "version": 2
      },
      "rules": {
        "min_clearance": 0.09,
        "min_track_width": 0.09,
        "min_via_annular_width": 0.05,
        "min_via_diameter": 0.4,
        "min_through_hole_diameter": 0.3,
        "min_hole_to_hole": 0.2,
        "min_hole_clearance": 0.2,
        "min_copper_edge_clearance": 0.2,
        "min_silk_clearance": 0.15,
        "min_text_height": 1,
        "min_text_thickness": 0.15
      },
      "track_widths": [
        0
      ],
      "via_dimensions": [
        {
          "diameter": 0,
          "drill": 0
        }
      ]
    }
  },
  "meta": {
    "filename": "blinky.kicad_pro",
    "version": 3
  },
  "net_settings": {
    "classes": [
      {
        "name": "Default",
        "priority": 2147483647,
        "clearance": 0.2,
        "track_width": 0.2,
        "via_diameter": 0.6,
        "via_drill": 0.3,
        "microvia_diameter": 0.3,
        "microvia_drill": 0.1,
        "diff_pair_width": 0.2,
        "diff_pair_gap": 0.25,
        "diff_pair_via_gap": 0.25,
        "wire_width": 6,
        "bus_width": 12,
        "line_style": 0
      }
    ],
    "meta": {
      "version": 5
    }
  },
  "text_variables": {
    "FAB": "JLCPCB",
    "FAB_PROFILE": "jlcpcb v2 (standard)"
  }
}
",
  "blinky/blinky.kicad_sch": "(kicad_sch
	(version 20250114)
	(generator "eeschema")
	(generator_version "9.0")
	(uuid "47ee5079-8699-4afb-9512-2ca5212077e8")
	(paper "A4")
	(title_block
		(title "blinky")
		(date "2026-10-05")
		(rev "A")
		(comment 1 "JLCPCB Standard rules, 6 layers")
	)
	(lib_symbols)
	(sheet_instances
		(path "/"
			(page "1")
		)
	)
)
",
}
`;

exports[`generateKicadProject > kicad-default standard 2-layer matches its snapshot 1`] = `
{
  "blinky/blinky.kicad_pcb": "(kicad_pcb
	(version 20241229)
	(generator "pcbnew")
	(generator_version "9.0")
	(general
		(thickness 1.6)
		(legacy_teardrops no)
	)
	(paper "A4")
	(layers
		(0 "F.Cu" signal)
		(2 "B.Cu" signal)
		(9 "F.Adhes" user "F.Adhesive")
		(11 "B.Adhes" user "B.Adhesive")
		(13 "F.Paste" user)
		(15 "B.Paste" user)
		(5 "F.SilkS" user "F.Silkscreen")
		(7 "B.SilkS" user "B.Silkscreen")
		(1 "F.Mask" user)
		(3 "B.Mask" user)
		(17 "Dwgs.User" user "User.Drawings")
		(19 "Cmts.User" user "User.Comments")
		(21 "Eco1.User" user "User.Eco1")
		(23 "Eco2.User" user "User.Eco2")
		(25 "Edge.Cuts" user)
		(27 "Margin" user)
		(31 "F.CrtYd" user "F.Courtyard")
		(29 "B.CrtYd" user "B.Courtyard")
		(35 "F.Fab" user)
		(33 "B.Fab" user)
	)
	(setup
		(stackup
			(layer "F.SilkS"
				(type "Top Silk Screen")
			)
			(layer "F.Paste"
				(type "Top Solder Paste")
			)
			(layer "F.Mask"
				(type "Top Solder Mask")
				(thickness 0.01)
			)
			(layer "F.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 1"
				(type "core")
				(thickness 1.51)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "B.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "B.Mask"
				(type "Bottom Solder Mask")
				(thickness 0.01)
			)
			(layer "B.Paste"
				(type "Bottom Solder Paste")
			)
			(layer "B.SilkS"
				(type "Bottom Silk Screen")
			)
			(copper_finish "None")
			(dielectric_constraints no)
		)
		(pad_to_mask_clearance 0)
		(allow_soldermask_bridges_in_footprints no)
		(tenting front back)
	)
	(net 0 "")
)
",
  "blinky/blinky.kicad_pro": "{
  "board": {
    "design_settings": {
      "meta": {
        "version": 2
      },
      "rules": {
        "min_track_width": 0.2,
        "min_via_annular_width": 0.1,
        "min_via_diameter": 0.5,
        "min_through_hole_diameter": 0.3,
        "min_hole_to_hole": 0.25,
        "min_hole_clearance": 0.25,
        "min_copper_edge_clearance": 0.5,
        "min_text_height": 0.8,
        "min_text_thickness": 0.08
      },
      "track_widths": [
        0
      ],
      "via_dimensions": [
        {
          "diameter": 0,
          "drill": 0
        }
      ]
    }
  },
  "meta": {
    "filename": "blinky.kicad_pro",
    "version": 3
  },
  "net_settings": {
    "classes": [
      {
        "name": "Default",
        "priority": 2147483647,
        "clearance": 0.2,
        "track_width": 0.2,
        "via_diameter": 0.6,
        "via_drill": 0.3,
        "microvia_diameter": 0.3,
        "microvia_drill": 0.1,
        "diff_pair_width": 0.2,
        "diff_pair_gap": 0.25,
        "diff_pair_via_gap": 0.25,
        "wire_width": 6,
        "bus_width": 12,
        "line_style": 0
      }
    ],
    "meta": {
      "version": 5
    }
  }
}
",
  "blinky/blinky.kicad_sch": "(kicad_sch
	(version 20250114)
	(generator "eeschema")
	(generator_version "9.0")
	(uuid "4222b999-afa2-4109-93cf-d2b6f9b1d85a")
	(paper "A4")
	(title_block
		(title "blinky")
		(date "2026-10-05")
		(rev "A")
	)
	(lib_symbols)
	(sheet_instances
		(path "/"
			(page "1")
		)
	)
)
",
}
`;

exports[`generateKicadProject > kicad-default standard 4-layer matches its snapshot 1`] = `
{
  "blinky/blinky.kicad_pcb": "(kicad_pcb
	(version 20241229)
	(generator "pcbnew")
	(generator_version "9.0")
	(general
		(thickness 1.6)
		(legacy_teardrops no)
	)
	(paper "A4")
	(layers
		(0 "F.Cu" signal)
		(4 "In1.Cu" signal)
		(6 "In2.Cu" signal)
		(2 "B.Cu" signal)
		(9 "F.Adhes" user "F.Adhesive")
		(11 "B.Adhes" user "B.Adhesive")
		(13 "F.Paste" user)
		(15 "B.Paste" user)
		(5 "F.SilkS" user "F.Silkscreen")
		(7 "B.SilkS" user "B.Silkscreen")
		(1 "F.Mask" user)
		(3 "B.Mask" user)
		(17 "Dwgs.User" user "User.Drawings")
		(19 "Cmts.User" user "User.Comments")
		(21 "Eco1.User" user "User.Eco1")
		(23 "Eco2.User" user "User.Eco2")
		(25 "Edge.Cuts" user)
		(27 "Margin" user)
		(31 "F.CrtYd" user "F.Courtyard")
		(29 "B.CrtYd" user "B.Courtyard")
		(35 "F.Fab" user)
		(33 "B.Fab" user)
	)
	(setup
		(stackup
			(layer "F.SilkS"
				(type "Top Silk Screen")
			)
			(layer "F.Paste"
				(type "Top Solder Paste")
			)
			(layer "F.Mask"
				(type "Top Solder Mask")
				(thickness 0.01)
			)
			(layer "F.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 1"
				(type "prepreg")
				(thickness 0.1)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "In1.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 2"
				(type "core")
				(thickness 1.24)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "In2.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 3"
				(type "prepreg")
				(thickness 0.1)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "B.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "B.Mask"
				(type "Bottom Solder Mask")
				(thickness 0.01)
			)
			(layer "B.Paste"
				(type "Bottom Solder Paste")
			)
			(layer "B.SilkS"
				(type "Bottom Silk Screen")
			)
			(copper_finish "None")
			(dielectric_constraints no)
		)
		(pad_to_mask_clearance 0)
		(allow_soldermask_bridges_in_footprints no)
		(tenting front back)
	)
	(net 0 "")
)
",
  "blinky/blinky.kicad_pro": "{
  "board": {
    "design_settings": {
      "meta": {
        "version": 2
      },
      "rules": {
        "min_track_width": 0.2,
        "min_via_annular_width": 0.1,
        "min_via_diameter": 0.5,
        "min_through_hole_diameter": 0.3,
        "min_hole_to_hole": 0.25,
        "min_hole_clearance": 0.25,
        "min_copper_edge_clearance": 0.5,
        "min_text_height": 0.8,
        "min_text_thickness": 0.08
      },
      "track_widths": [
        0
      ],
      "via_dimensions": [
        {
          "diameter": 0,
          "drill": 0
        }
      ]
    }
  },
  "meta": {
    "filename": "blinky.kicad_pro",
    "version": 3
  },
  "net_settings": {
    "classes": [
      {
        "name": "Default",
        "priority": 2147483647,
        "clearance": 0.2,
        "track_width": 0.2,
        "via_diameter": 0.6,
        "via_drill": 0.3,
        "microvia_diameter": 0.3,
        "microvia_drill": 0.1,
        "diff_pair_width": 0.2,
        "diff_pair_gap": 0.25,
        "diff_pair_via_gap": 0.25,
        "wire_width": 6,
        "bus_width": 12,
        "line_style": 0
      }
    ],
    "meta": {
      "version": 5
    }
  }
}
",
  "blinky/blinky.kicad_sch": "(kicad_sch
	(version 20250114)
	(generator "eeschema")
	(generator_version "9.0")
	(uuid "4222b999-afa2-4109-93cf-d2b6f9b1d85a")
	(paper "A4")
	(title_block
		(title "blinky")
		(date "2026-10-05")
		(rev "A")
	)
	(lib_symbols)
	(sheet_instances
		(path "/"
			(page "1")
		)
	)
)
",
}
`;

exports[`generateKicadProject > kicad-default standard 6-layer matches its snapshot 1`] = `
{
  "blinky/blinky.kicad_pcb": "(kicad_pcb
	(version 20241229)
	(generator "pcbnew")
	(generator_version "9.0")
	(general
		(thickness 1.6)
		(legacy_teardrops no)
	)
	(paper "A4")
	(layers
		(0 "F.Cu" signal)
		(4 "In1.Cu" signal)
		(6 "In2.Cu" signal)
		(8 "In3.Cu" signal)
		(10 "In4.Cu" signal)
		(2 "B.Cu" signal)
		(9 "F.Adhes" user "F.Adhesive")
		(11 "B.Adhes" user "B.Adhesive")
		(13 "F.Paste" user)
		(15 "B.Paste" user)
		(5 "F.SilkS" user "F.Silkscreen")
		(7 "B.SilkS" user "B.Silkscreen")
		(1 "F.Mask" user)
		(3 "B.Mask" user)
		(17 "Dwgs.User" user "User.Drawings")
		(19 "Cmts.User" user "User.Comments")
		(21 "Eco1.User" user "User.Eco1")
		(23 "Eco2.User" user "User.Eco2")
		(25 "Edge.Cuts" user)
		(27 "Margin" user)
		(31 "F.CrtYd" user "F.Courtyard")
		(29 "B.CrtYd" user "B.Courtyard")
		(35 "F.Fab" user)
		(33 "B.Fab" user)
	)
	(setup
		(stackup
			(layer "F.SilkS"
				(type "Top Silk Screen")
			)
			(layer "F.Paste"
				(type "Top Solder Paste")
			)
			(layer "F.Mask"
				(type "Top Solder Mask")
				(thickness 0.01)
			)
			(layer "F.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 1"
				(type "prepreg")
				(thickness 0.1)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "In1.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 2"
				(type "core")
				(thickness 0.535)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "In2.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 3"
				(type "prepreg")
				(thickness 0.1)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "In3.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 4"
				(type "core")
				(thickness 0.535)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "In4.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 5"
				(type "prepreg")
				(thickness 0.1)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "B.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "B.Mask"
				(type "Bottom Solder Mask")
				(thickness 0.01)
			)
			(layer "B.Paste"
				(type "Bottom Solder Paste")
			)
			(layer "B.SilkS"
				(type "Bottom Silk Screen")
			)
			(copper_finish "None")
			(dielectric_constraints no)
		)
		(pad_to_mask_clearance 0)
		(allow_soldermask_bridges_in_footprints no)
		(tenting front back)
	)
	(net 0 "")
)
",
  "blinky/blinky.kicad_pro": "{
  "board": {
    "design_settings": {
      "meta": {
        "version": 2
      },
      "rules": {
        "min_track_width": 0.2,
        "min_via_annular_width": 0.1,
        "min_via_diameter": 0.5,
        "min_through_hole_diameter": 0.3,
        "min_hole_to_hole": 0.25,
        "min_hole_clearance": 0.25,
        "min_copper_edge_clearance": 0.5,
        "min_text_height": 0.8,
        "min_text_thickness": 0.08
      },
      "track_widths": [
        0
      ],
      "via_dimensions": [
        {
          "diameter": 0,
          "drill": 0
        }
      ]
    }
  },
  "meta": {
    "filename": "blinky.kicad_pro",
    "version": 3
  },
  "net_settings": {
    "classes": [
      {
        "name": "Default",
        "priority": 2147483647,
        "clearance": 0.2,
        "track_width": 0.2,
        "via_diameter": 0.6,
        "via_drill": 0.3,
        "microvia_diameter": 0.3,
        "microvia_drill": 0.1,
        "diff_pair_width": 0.2,
        "diff_pair_gap": 0.25,
        "diff_pair_via_gap": 0.25,
        "wire_width": 6,
        "bus_width": 12,
        "line_style": 0
      }
    ],
    "meta": {
      "version": 5
    }
  }
}
",
  "blinky/blinky.kicad_sch": "(kicad_sch
	(version 20250114)
	(generator "eeschema")
	(generator_version "9.0")
	(uuid "4222b999-afa2-4109-93cf-d2b6f9b1d85a")
	(paper "A4")
	(title_block
		(title "blinky")
		(date "2026-10-05")
		(rev "A")
	)
	(lib_symbols)
	(sheet_instances
		(path "/"
			(page "1")
		)
	)
)
",
}
`;

exports[`generateKicadProject > pcbway advanced 2-layer matches its snapshot 1`] = `
{
  "blinky/blinky.kicad_dru": "(version 1)
(rule "PCBWay: smallest hole"
	(constraint hole_size (min 0.15mm)))
(rule "PCBWay: via diameter"
	(constraint via_diameter (min 0.45mm))
	(condition "A.Type == 'Via'"))
(rule "PCBWay: via annular ring"
	(constraint annular_width (min 0.15mm))
	(condition "A.Type == 'Via'"))
(rule "PCBWay: plated hole annular ring"
	(constraint annular_width (min 0.254mm))
	(condition "A.Type == 'Pad' && A.Pad_Type == 'Through-hole'"))
(rule "PCBWay: hole to hole"
	(constraint hole_to_hole (min 0.28mm)))
(rule "PCBWay: pad hole to pad hole"
	(constraint hole_to_hole (min 0.41mm))
	(condition "A.Type == 'Pad' && B.Type == 'Pad'"))
(rule "PCBWay: copper to board edge"
	(constraint edge_clearance (min 0.2mm)))
(rule "PCBWay: silkscreen text height"
	(constraint text_height (min 0.8mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
(rule "PCBWay: silkscreen text thickness"
	(constraint text_thickness (min 0.15mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
",
  "blinky/blinky.kicad_pcb": "(kicad_pcb
	(version 20241229)
	(generator "pcbnew")
	(generator_version "9.0")
	(general
		(thickness 1.6)
		(legacy_teardrops no)
	)
	(paper "A4")
	(layers
		(0 "F.Cu" signal)
		(2 "B.Cu" signal)
		(9 "F.Adhes" user "F.Adhesive")
		(11 "B.Adhes" user "B.Adhesive")
		(13 "F.Paste" user)
		(15 "B.Paste" user)
		(5 "F.SilkS" user "F.Silkscreen")
		(7 "B.SilkS" user "B.Silkscreen")
		(1 "F.Mask" user)
		(3 "B.Mask" user)
		(17 "Dwgs.User" user "User.Drawings")
		(19 "Cmts.User" user "User.Comments")
		(21 "Eco1.User" user "User.Eco1")
		(23 "Eco2.User" user "User.Eco2")
		(25 "Edge.Cuts" user)
		(27 "Margin" user)
		(31 "F.CrtYd" user "F.Courtyard")
		(29 "B.CrtYd" user "B.Courtyard")
		(35 "F.Fab" user)
		(33 "B.Fab" user)
	)
	(setup
		(stackup
			(layer "F.SilkS"
				(type "Top Silk Screen")
			)
			(layer "F.Paste"
				(type "Top Solder Paste")
			)
			(layer "F.Mask"
				(type "Top Solder Mask")
				(thickness 0.01)
			)
			(layer "F.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 1"
				(type "core")
				(thickness 1.51)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "B.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "B.Mask"
				(type "Bottom Solder Mask")
				(thickness 0.01)
			)
			(layer "B.Paste"
				(type "Bottom Solder Paste")
			)
			(layer "B.SilkS"
				(type "Bottom Silk Screen")
			)
			(copper_finish "None")
			(dielectric_constraints no)
		)
		(pad_to_mask_clearance 0)
		(allow_soldermask_bridges_in_footprints no)
		(tenting front back)
	)
	(net 0 "")
)
",
  "blinky/blinky.kicad_pro": "{
  "board": {
    "design_settings": {
      "meta": {
        "version": 2
      },
      "rules": {
        "min_clearance": 0.1,
        "min_track_width": 0.1,
        "min_via_annular_width": 0.15,
        "min_via_diameter": 0.45,
        "min_through_hole_diameter": 0.15,
        "min_hole_to_hole": 0.28,
        "min_copper_edge_clearance": 0.2,
        "min_text_height": 0.8,
        "min_text_thickness": 0.15
      },
      "track_widths": [
        0
      ],
      "via_dimensions": [
        {
          "diameter": 0,
          "drill": 0
        }
      ]
    }
  },
  "meta": {
    "filename": "blinky.kicad_pro",
    "version": 3
  },
  "net_settings": {
    "classes": [
      {
        "name": "Default",
        "priority": 2147483647,
        "clearance": 0.2,
        "track_width": 0.2,
        "via_diameter": 0.6,
        "via_drill": 0.3,
        "microvia_diameter": 0.3,
        "microvia_drill": 0.1,
        "diff_pair_width": 0.2,
        "diff_pair_gap": 0.25,
        "diff_pair_via_gap": 0.25,
        "wire_width": 6,
        "bus_width": 12,
        "line_style": 0
      }
    ],
    "meta": {
      "version": 5
    }
  },
  "text_variables": {
    "FAB": "PCBWay",
    "FAB_PROFILE": "pcbway v1 (advanced)"
  }
}
",
  "blinky/blinky.kicad_sch": "(kicad_sch
	(version 20250114)
	(generator "eeschema")
	(generator_version "9.0")
	(uuid "4f5822cc-7a53-41ef-b805-9521bf12e870")
	(paper "A4")
	(title_block
		(title "blinky")
		(date "2026-10-05")
		(rev "A")
		(comment 1 "PCBWay Advanced rules, 2 layers")
	)
	(lib_symbols)
	(sheet_instances
		(path "/"
			(page "1")
		)
	)
)
",
}
`;

exports[`generateKicadProject > pcbway advanced 4-layer matches its snapshot 1`] = `
{
  "blinky/blinky.kicad_dru": "(version 1)
(rule "PCBWay: smallest hole"
	(constraint hole_size (min 0.15mm)))
(rule "PCBWay: via diameter"
	(constraint via_diameter (min 0.45mm))
	(condition "A.Type == 'Via'"))
(rule "PCBWay: via annular ring"
	(constraint annular_width (min 0.15mm))
	(condition "A.Type == 'Via'"))
(rule "PCBWay: plated hole annular ring"
	(constraint annular_width (min 0.254mm))
	(condition "A.Type == 'Pad' && A.Pad_Type == 'Through-hole'"))
(rule "PCBWay: hole to hole"
	(constraint hole_to_hole (min 0.28mm)))
(rule "PCBWay: pad hole to pad hole"
	(constraint hole_to_hole (min 0.41mm))
	(condition "A.Type == 'Pad' && B.Type == 'Pad'"))
(rule "PCBWay: copper to board edge"
	(constraint edge_clearance (min 0.2mm)))
(rule "PCBWay: silkscreen text height"
	(constraint text_height (min 0.8mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
(rule "PCBWay: silkscreen text thickness"
	(constraint text_thickness (min 0.15mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
",
  "blinky/blinky.kicad_pcb": "(kicad_pcb
	(version 20241229)
	(generator "pcbnew")
	(generator_version "9.0")
	(general
		(thickness 1.6)
		(legacy_teardrops no)
	)
	(paper "A4")
	(layers
		(0 "F.Cu" signal)
		(4 "In1.Cu" signal)
		(6 "In2.Cu" signal)
		(2 "B.Cu" signal)
		(9 "F.Adhes" user "F.Adhesive")
		(11 "B.Adhes" user "B.Adhesive")
		(13 "F.Paste" user)
		(15 "B.Paste" user)
		(5 "F.SilkS" user "F.Silkscreen")
		(7 "B.SilkS" user "B.Silkscreen")
		(1 "F.Mask" user)
		(3 "B.Mask" user)
		(17 "Dwgs.User" user "User.Drawings")
		(19 "Cmts.User" user "User.Comments")
		(21 "Eco1.User" user "User.Eco1")
		(23 "Eco2.User" user "User.Eco2")
		(25 "Edge.Cuts" user)
		(27 "Margin" user)
		(31 "F.CrtYd" user "F.Courtyard")
		(29 "B.CrtYd" user "B.Courtyard")
		(35 "F.Fab" user)
		(33 "B.Fab" user)
	)
	(setup
		(stackup
			(layer "F.SilkS"
				(type "Top Silk Screen")
			)
			(layer "F.Paste"
				(type "Top Solder Paste")
			)
			(layer "F.Mask"
				(type "Top Solder Mask")
				(thickness 0.01)
			)
			(layer "F.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 1"
				(type "prepreg")
				(thickness 0.1)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "In1.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 2"
				(type "core")
				(thickness 1.24)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "In2.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 3"
				(type "prepreg")
				(thickness 0.1)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "B.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "B.Mask"
				(type "Bottom Solder Mask")
				(thickness 0.01)
			)
			(layer "B.Paste"
				(type "Bottom Solder Paste")
			)
			(layer "B.SilkS"
				(type "Bottom Silk Screen")
			)
			(copper_finish "None")
			(dielectric_constraints no)
		)
		(pad_to_mask_clearance 0)
		(allow_soldermask_bridges_in_footprints no)
		(tenting front back)
	)
	(net 0 "")
)
",
  "blinky/blinky.kicad_pro": "{
  "board": {
    "design_settings": {
      "meta": {
        "version": 2
      },
      "rules": {
        "min_clearance": 0.1,
        "min_track_width": 0.1,
        "min_via_annular_width": 0.15,
        "min_via_diameter": 0.45,
        "min_through_hole_diameter": 0.15,
        "min_hole_to_hole": 0.28,
        "min_copper_edge_clearance": 0.2,
        "min_text_height": 0.8,
        "min_text_thickness": 0.15
      },
      "track_widths": [
        0
      ],
      "via_dimensions": [
        {
          "diameter": 0,
          "drill": 0
        }
      ]
    }
  },
  "meta": {
    "filename": "blinky.kicad_pro",
    "version": 3
  },
  "net_settings": {
    "classes": [
      {
        "name": "Default",
        "priority": 2147483647,
        "clearance": 0.2,
        "track_width": 0.2,
        "via_diameter": 0.6,
        "via_drill": 0.3,
        "microvia_diameter": 0.3,
        "microvia_drill": 0.1,
        "diff_pair_width": 0.2,
        "diff_pair_gap": 0.25,
        "diff_pair_via_gap": 0.25,
        "wire_width": 6,
        "bus_width": 12,
        "line_style": 0
      }
    ],
    "meta": {
      "version": 5
    }
  },
  "text_variables": {
    "FAB": "PCBWay",
    "FAB_PROFILE": "pcbway v1 (advanced)"
  }
}
",
  "blinky/blinky.kicad_sch": "(kicad_sch
	(version 20250114)
	(generator "eeschema")
	(generator_version "9.0")
	(uuid "4f5822cc-7a53-41ef-b805-9521bf12e870")
	(paper "A4")
	(title_block
		(title "blinky")
		(date "2026-10-05")
		(rev "A")
		(comment 1 "PCBWay Advanced rules, 4 layers")
	)
	(lib_symbols)
	(sheet_instances
		(path "/"
			(page "1")
		)
	)
)
",
}
`;

exports[`generateKicadProject > pcbway advanced 6-layer matches its snapshot 1`] = `
{
  "blinky/blinky.kicad_dru": "(version 1)
(rule "PCBWay: smallest hole"
	(constraint hole_size (min 0.15mm)))
(rule "PCBWay: via diameter"
	(constraint via_diameter (min 0.45mm))
	(condition "A.Type == 'Via'"))
(rule "PCBWay: via annular ring"
	(constraint annular_width (min 0.15mm))
	(condition "A.Type == 'Via'"))
(rule "PCBWay: plated hole annular ring"
	(constraint annular_width (min 0.254mm))
	(condition "A.Type == 'Pad' && A.Pad_Type == 'Through-hole'"))
(rule "PCBWay: hole to hole"
	(constraint hole_to_hole (min 0.28mm)))
(rule "PCBWay: pad hole to pad hole"
	(constraint hole_to_hole (min 0.41mm))
	(condition "A.Type == 'Pad' && B.Type == 'Pad'"))
(rule "PCBWay: copper to board edge"
	(constraint edge_clearance (min 0.2mm)))
(rule "PCBWay: silkscreen text height"
	(constraint text_height (min 0.8mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
(rule "PCBWay: silkscreen text thickness"
	(constraint text_thickness (min 0.15mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
",
  "blinky/blinky.kicad_pcb": "(kicad_pcb
	(version 20241229)
	(generator "pcbnew")
	(generator_version "9.0")
	(general
		(thickness 1.6)
		(legacy_teardrops no)
	)
	(paper "A4")
	(layers
		(0 "F.Cu" signal)
		(4 "In1.Cu" signal)
		(6 "In2.Cu" signal)
		(8 "In3.Cu" signal)
		(10 "In4.Cu" signal)
		(2 "B.Cu" signal)
		(9 "F.Adhes" user "F.Adhesive")
		(11 "B.Adhes" user "B.Adhesive")
		(13 "F.Paste" user)
		(15 "B.Paste" user)
		(5 "F.SilkS" user "F.Silkscreen")
		(7 "B.SilkS" user "B.Silkscreen")
		(1 "F.Mask" user)
		(3 "B.Mask" user)
		(17 "Dwgs.User" user "User.Drawings")
		(19 "Cmts.User" user "User.Comments")
		(21 "Eco1.User" user "User.Eco1")
		(23 "Eco2.User" user "User.Eco2")
		(25 "Edge.Cuts" user)
		(27 "Margin" user)
		(31 "F.CrtYd" user "F.Courtyard")
		(29 "B.CrtYd" user "B.Courtyard")
		(35 "F.Fab" user)
		(33 "B.Fab" user)
	)
	(setup
		(stackup
			(layer "F.SilkS"
				(type "Top Silk Screen")
			)
			(layer "F.Paste"
				(type "Top Solder Paste")
			)
			(layer "F.Mask"
				(type "Top Solder Mask")
				(thickness 0.01)
			)
			(layer "F.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 1"
				(type "prepreg")
				(thickness 0.1)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "In1.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 2"
				(type "core")
				(thickness 0.535)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "In2.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 3"
				(type "prepreg")
				(thickness 0.1)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "In3.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 4"
				(type "core")
				(thickness 0.535)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "In4.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 5"
				(type "prepreg")
				(thickness 0.1)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "B.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "B.Mask"
				(type "Bottom Solder Mask")
				(thickness 0.01)
			)
			(layer "B.Paste"
				(type "Bottom Solder Paste")
			)
			(layer "B.SilkS"
				(type "Bottom Silk Screen")
			)
			(copper_finish "None")
			(dielectric_constraints no)
		)
		(pad_to_mask_clearance 0)
		(allow_soldermask_bridges_in_footprints no)
		(tenting front back)
	)
	(net 0 "")
)
",
  "blinky/blinky.kicad_pro": "{
  "board": {
    "design_settings": {
      "meta": {
        "version": 2
      },
      "rules": {
        "min_clearance": 0.1,
        "min_track_width": 0.1,
        "min_via_annular_width": 0.15,
        "min_via_diameter": 0.45,
        "min_through_hole_diameter": 0.15,
        "min_hole_to_hole": 0.28,
        "min_copper_edge_clearance": 0.2,
        "min_text_height": 0.8,
        "min_text_thickness": 0.15
      },
      "track_widths": [
        0
      ],
      "via_dimensions": [
        {
          "diameter": 0,
          "drill": 0
        }
      ]
    }
  },
  "meta": {
    "filename": "blinky.kicad_pro",
    "version": 3
  },
  "net_settings": {
    "classes": [
      {
        "name": "Default",
        "priority": 2147483647,
        "clearance": 0.2,
        "track_width": 0.2,
        "via_diameter": 0.6,
        "via_drill": 0.3,
        "microvia_diameter": 0.3,
        "microvia_drill": 0.1,
        "diff_pair_width": 0.2,
        "diff_pair_gap": 0.25,
        "diff_pair_via_gap": 0.25,
        "wire_width": 6,
        "bus_width": 12,
        "line_style": 0
      }
    ],
    "meta": {
      "version": 5
    }
  },
  "text_variables": {
    "FAB": "PCBWay",
    "FAB_PROFILE": "pcbway v1 (advanced)"
  }
}
",
  "blinky/blinky.kicad_sch": "(kicad_sch
	(version 20250114)
	(generator "eeschema")
	(generator_version "9.0")
	(uuid "4f5822cc-7a53-41ef-b805-9521bf12e870")
	(paper "A4")
	(title_block
		(title "blinky")
		(date "2026-10-05")
		(rev "A")
		(comment 1 "PCBWay Advanced rules, 6 layers")
	)
	(lib_symbols)
	(sheet_instances
		(path "/"
			(page "1")
		)
	)
)
",
}
`;

exports[`generateKicadProject > pcbway standard 2-layer matches its snapshot 1`] = `
{
  "blinky/blinky.kicad_dru": "(version 1)
(rule "PCBWay: smallest hole"
	(constraint hole_size (min 0.2mm)))
(rule "PCBWay: via diameter"
	(constraint via_diameter (min 0.5mm))
	(condition "A.Type == 'Via'"))
(rule "PCBWay: via annular ring"
	(constraint annular_width (min 0.15mm))
	(condition "A.Type == 'Via'"))
(rule "PCBWay: plated hole annular ring"
	(constraint annular_width (min 0.254mm))
	(condition "A.Type == 'Pad' && A.Pad_Type == 'Through-hole'"))
(rule "PCBWay: hole to hole"
	(constraint hole_to_hole (min 0.28mm)))
(rule "PCBWay: pad hole to pad hole"
	(constraint hole_to_hole (min 0.41mm))
	(condition "A.Type == 'Pad' && B.Type == 'Pad'"))
(rule "PCBWay: copper to board edge"
	(constraint edge_clearance (min 0.25mm)))
(rule "PCBWay: silkscreen text height"
	(constraint text_height (min 0.8mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
(rule "PCBWay: silkscreen text thickness"
	(constraint text_thickness (min 0.15mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
",
  "blinky/blinky.kicad_pcb": "(kicad_pcb
	(version 20241229)
	(generator "pcbnew")
	(generator_version "9.0")
	(general
		(thickness 1.6)
		(legacy_teardrops no)
	)
	(paper "A4")
	(layers
		(0 "F.Cu" signal)
		(2 "B.Cu" signal)
		(9 "F.Adhes" user "F.Adhesive")
		(11 "B.Adhes" user "B.Adhesive")
		(13 "F.Paste" user)
		(15 "B.Paste" user)
		(5 "F.SilkS" user "F.Silkscreen")
		(7 "B.SilkS" user "B.Silkscreen")
		(1 "F.Mask" user)
		(3 "B.Mask" user)
		(17 "Dwgs.User" user "User.Drawings")
		(19 "Cmts.User" user "User.Comments")
		(21 "Eco1.User" user "User.Eco1")
		(23 "Eco2.User" user "User.Eco2")
		(25 "Edge.Cuts" user)
		(27 "Margin" user)
		(31 "F.CrtYd" user "F.Courtyard")
		(29 "B.CrtYd" user "B.Courtyard")
		(35 "F.Fab" user)
		(33 "B.Fab" user)
	)
	(setup
		(stackup
			(layer "F.SilkS"
				(type "Top Silk Screen")
			)
			(layer "F.Paste"
				(type "Top Solder Paste")
			)
			(layer "F.Mask"
				(type "Top Solder Mask")
				(thickness 0.01)
			)
			(layer "F.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 1"
				(type "core")
				(thickness 1.51)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "B.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "B.Mask"
				(type "Bottom Solder Mask")
				(thickness 0.01)
			)
			(layer "B.Paste"
				(type "Bottom Solder Paste")
			)
			(layer "B.SilkS"
				(type "Bottom Silk Screen")
			)
			(copper_finish "None")
			(dielectric_constraints no)
		)
		(pad_to_mask_clearance 0)
		(allow_soldermask_bridges_in_footprints no)
		(tenting front back)
	)
	(net 0 "")
)
",
  "blinky/blinky.kicad_pro": "{
  "board": {
    "design_settings": {
      "meta": {
        "version": 2
      },
      "rules": {
        "min_clearance": 0.1,
        "min_track_width": 0.1,
        "min_via_annular_width": 0.15,
        "min_via_diameter": 0.5,
        "min_through_hole_diameter": 0.2,
        "min_hole_to_hole": 0.28,
        "min_copper_edge_clearance": 0.25,
        "min_text_height": 0.8,
        "min_text_thickness": 0.15
      },
      "track_widths": [
        0
      ],
      "via_dimensions": [
        {
          "diameter": 0,
          "drill": 0
        }
      ]
    }
  },
  "meta": {
    "filename": "blinky.kicad_pro",
    "version": 3
  },
  "net_settings": {
    "classes": [
      {
        "name": "Default",
        "priority": 2147483647,
        "clearance": 0.2,
        "track_width": 0.2,
        "via_diameter": 0.6,
        "via_drill": 0.3,
        "microvia_diameter": 0.3,
        "microvia_drill": 0.1,
        "diff_pair_width": 0.2,
        "diff_pair_gap": 0.25,
        "diff_pair_via_gap": 0.25,
        "wire_width": 6,
        "bus_width": 12,
        "line_style": 0
      }
    ],
    "meta": {
      "version": 5
    }
  },
  "text_variables": {
    "FAB": "PCBWay",
    "FAB_PROFILE": "pcbway v1 (standard)"
  }
}
",
  "blinky/blinky.kicad_sch": "(kicad_sch
	(version 20250114)
	(generator "eeschema")
	(generator_version "9.0")
	(uuid "4f5822cc-7a53-41ef-b805-9521bf12e870")
	(paper "A4")
	(title_block
		(title "blinky")
		(date "2026-10-05")
		(rev "A")
		(comment 1 "PCBWay Standard rules, 2 layers")
	)
	(lib_symbols)
	(sheet_instances
		(path "/"
			(page "1")
		)
	)
)
",
}
`;

exports[`generateKicadProject > pcbway standard 4-layer matches its snapshot 1`] = `
{
  "blinky/blinky.kicad_dru": "(version 1)
(rule "PCBWay: smallest hole"
	(constraint hole_size (min 0.2mm)))
(rule "PCBWay: via diameter"
	(constraint via_diameter (min 0.5mm))
	(condition "A.Type == 'Via'"))
(rule "PCBWay: via annular ring"
	(constraint annular_width (min 0.15mm))
	(condition "A.Type == 'Via'"))
(rule "PCBWay: plated hole annular ring"
	(constraint annular_width (min 0.254mm))
	(condition "A.Type == 'Pad' && A.Pad_Type == 'Through-hole'"))
(rule "PCBWay: hole to hole"
	(constraint hole_to_hole (min 0.28mm)))
(rule "PCBWay: pad hole to pad hole"
	(constraint hole_to_hole (min 0.41mm))
	(condition "A.Type == 'Pad' && B.Type == 'Pad'"))
(rule "PCBWay: copper to board edge"
	(constraint edge_clearance (min 0.25mm)))
(rule "PCBWay: silkscreen text height"
	(constraint text_height (min 0.8mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
(rule "PCBWay: silkscreen text thickness"
	(constraint text_thickness (min 0.15mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
",
  "blinky/blinky.kicad_pcb": "(kicad_pcb
	(version 20241229)
	(generator "pcbnew")
	(generator_version "9.0")
	(general
		(thickness 1.6)
		(legacy_teardrops no)
	)
	(paper "A4")
	(layers
		(0 "F.Cu" signal)
		(4 "In1.Cu" signal)
		(6 "In2.Cu" signal)
		(2 "B.Cu" signal)
		(9 "F.Adhes" user "F.Adhesive")
		(11 "B.Adhes" user "B.Adhesive")
		(13 "F.Paste" user)
		(15 "B.Paste" user)
		(5 "F.SilkS" user "F.Silkscreen")
		(7 "B.SilkS" user "B.Silkscreen")
		(1 "F.Mask" user)
		(3 "B.Mask" user)
		(17 "Dwgs.User" user "User.Drawings")
		(19 "Cmts.User" user "User.Comments")
		(21 "Eco1.User" user "User.Eco1")
		(23 "Eco2.User" user "User.Eco2")
		(25 "Edge.Cuts" user)
		(27 "Margin" user)
		(31 "F.CrtYd" user "F.Courtyard")
		(29 "B.CrtYd" user "B.Courtyard")
		(35 "F.Fab" user)
		(33 "B.Fab" user)
	)
	(setup
		(stackup
			(layer "F.SilkS"
				(type "Top Silk Screen")
			)
			(layer "F.Paste"
				(type "Top Solder Paste")
			)
			(layer "F.Mask"
				(type "Top Solder Mask")
				(thickness 0.01)
			)
			(layer "F.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 1"
				(type "prepreg")
				(thickness 0.1)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "In1.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 2"
				(type "core")
				(thickness 1.24)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "In2.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 3"
				(type "prepreg")
				(thickness 0.1)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "B.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "B.Mask"
				(type "Bottom Solder Mask")
				(thickness 0.01)
			)
			(layer "B.Paste"
				(type "Bottom Solder Paste")
			)
			(layer "B.SilkS"
				(type "Bottom Silk Screen")
			)
			(copper_finish "None")
			(dielectric_constraints no)
		)
		(pad_to_mask_clearance 0)
		(allow_soldermask_bridges_in_footprints no)
		(tenting front back)
	)
	(net 0 "")
)
",
  "blinky/blinky.kicad_pro": "{
  "board": {
    "design_settings": {
      "meta": {
        "version": 2
      },
      "rules": {
        "min_clearance": 0.1,
        "min_track_width": 0.1,
        "min_via_annular_width": 0.15,
        "min_via_diameter": 0.5,
        "min_through_hole_diameter": 0.2,
        "min_hole_to_hole": 0.28,
        "min_copper_edge_clearance": 0.25,
        "min_text_height": 0.8,
        "min_text_thickness": 0.15
      },
      "track_widths": [
        0
      ],
      "via_dimensions": [
        {
          "diameter": 0,
          "drill": 0
        }
      ]
    }
  },
  "meta": {
    "filename": "blinky.kicad_pro",
    "version": 3
  },
  "net_settings": {
    "classes": [
      {
        "name": "Default",
        "priority": 2147483647,
        "clearance": 0.2,
        "track_width": 0.2,
        "via_diameter": 0.6,
        "via_drill": 0.3,
        "microvia_diameter": 0.3,
        "microvia_drill": 0.1,
        "diff_pair_width": 0.2,
        "diff_pair_gap": 0.25,
        "diff_pair_via_gap": 0.25,
        "wire_width": 6,
        "bus_width": 12,
        "line_style": 0
      }
    ],
    "meta": {
      "version": 5
    }
  },
  "text_variables": {
    "FAB": "PCBWay",
    "FAB_PROFILE": "pcbway v1 (standard)"
  }
}
",
  "blinky/blinky.kicad_sch": "(kicad_sch
	(version 20250114)
	(generator "eeschema")
	(generator_version "9.0")
	(uuid "4f5822cc-7a53-41ef-b805-9521bf12e870")
	(paper "A4")
	(title_block
		(title "blinky")
		(date "2026-10-05")
		(rev "A")
		(comment 1 "PCBWay Standard rules, 4 layers")
	)
	(lib_symbols)
	(sheet_instances
		(path "/"
			(page "1")
		)
	)
)
",
}
`;

exports[`generateKicadProject > pcbway standard 6-layer matches its snapshot 1`] = `
{
  "blinky/blinky.kicad_dru": "(version 1)
(rule "PCBWay: smallest hole"
	(constraint hole_size (min 0.2mm)))
(rule "PCBWay: via diameter"
	(constraint via_diameter (min 0.5mm))
	(condition "A.Type == 'Via'"))
(rule "PCBWay: via annular ring"
	(constraint annular_width (min 0.15mm))
	(condition "A.Type == 'Via'"))
(rule "PCBWay: plated hole annular ring"
	(constraint annular_width (min 0.254mm))
	(condition "A.Type == 'Pad' && A.Pad_Type == 'Through-hole'"))
(rule "PCBWay: hole to hole"
	(constraint hole_to_hole (min 0.28mm)))
(rule "PCBWay: pad hole to pad hole"
	(constraint hole_to_hole (min 0.41mm))
	(condition "A.Type == 'Pad' && B.Type == 'Pad'"))
(rule "PCBWay: copper to board edge"
	(constraint edge_clearance (min 0.25mm)))
(rule "PCBWay: silkscreen text height"
	(constraint text_height (min 0.8mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
(rule "PCBWay: silkscreen text thickness"
	(constraint text_thickness (min 0.15mm))
	(condition "A.Layer == 'F.SilkS' || A.Layer == 'B.SilkS'"))
",
  "blinky/blinky.kicad_pcb": "(kicad_pcb
	(version 20241229)
	(generator "pcbnew")
	(generator_version "9.0")
	(general
		(thickness 1.6)
		(legacy_teardrops no)
	)
	(paper "A4")
	(layers
		(0 "F.Cu" signal)
		(4 "In1.Cu" signal)
		(6 "In2.Cu" signal)
		(8 "In3.Cu" signal)
		(10 "In4.Cu" signal)
		(2 "B.Cu" signal)
		(9 "F.Adhes" user "F.Adhesive")
		(11 "B.Adhes" user "B.Adhesive")
		(13 "F.Paste" user)
		(15 "B.Paste" user)
		(5 "F.SilkS" user "F.Silkscreen")
		(7 "B.SilkS" user "B.Silkscreen")
		(1 "F.Mask" user)
		(3 "B.Mask" user)
		(17 "Dwgs.User" user "User.Drawings")
		(19 "Cmts.User" user "User.Comments")
		(21 "Eco1.User" user "User.Eco1")
		(23 "Eco2.User" user "User.Eco2")
		(25 "Edge.Cuts" user)
		(27 "Margin" user)
		(31 "F.CrtYd" user "F.Courtyard")
		(29 "B.CrtYd" user "B.Courtyard")
		(35 "F.Fab" user)
		(33 "B.Fab" user)
	)
	(setup
		(stackup
			(layer "F.SilkS"
				(type "Top Silk Screen")
			)
			(layer "F.Paste"
				(type "Top Solder Paste")
			)
			(layer "F.Mask"
				(type "Top Solder Mask")
				(thickness 0.01)
			)
			(layer "F.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 1"
				(type "prepreg")
				(thickness 0.1)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "In1.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 2"
				(type "core")
				(thickness 0.535)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "In2.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 3"
				(type "prepreg")
				(thickness 0.1)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "In3.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 4"
				(type "core")
				(thickness 0.535)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "In4.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "dielectric 5"
				(type "prepreg")
				(thickness 0.1)
				(material "FR4")
				(epsilon_r 4.5)
				(loss_tangent 0.02)
			)
			(layer "B.Cu"
				(type "copper")
				(thickness 0.035)
			)
			(layer "B.Mask"
				(type "Bottom Solder Mask")
				(thickness 0.01)
			)
			(layer "B.Paste"
				(type "Bottom Solder Paste")
			)
			(layer "B.SilkS"
				(type "Bottom Silk Screen")
			)
			(copper_finish "None")
			(dielectric_constraints no)
		)
		(pad_to_mask_clearance 0)
		(allow_soldermask_bridges_in_footprints no)
		(tenting front back)
	)
	(net 0 "")
)
",
  "blinky/blinky.kicad_pro": "{
  "board": {
    "design_settings": {
      "meta": {
        "version": 2
      },
      "rules": {
        "min_clearance": 0.1,
        "min_track_width": 0.1,
        "min_via_annular_width": 0.15,
        "min_via_diameter": 0.5,
        "min_through_hole_diameter": 0.2,
        "min_hole_to_hole": 0.28,
        "min_copper_edge_clearance": 0.25,
        "min_text_height": 0.8,
        "min_text_thickness": 0.15
      },
      "track_widths": [
        0
      ],
      "via_dimensions": [
        {
          "diameter": 0,
          "drill": 0
        }
      ]
    }
  },
  "meta": {
    "filename": "blinky.kicad_pro",
    "version": 3
  },
  "net_settings": {
    "classes": [
      {
        "name": "Default",
        "priority": 2147483647,
        "clearance": 0.2,
        "track_width": 0.2,
        "via_diameter": 0.6,
        "via_drill": 0.3,
        "microvia_diameter": 0.3,
        "microvia_drill": 0.1,
        "diff_pair_width": 0.2,
        "diff_pair_gap": 0.25,
        "diff_pair_via_gap": 0.25,
        "wire_width": 6,
        "bus_width": 12,
        "line_style": 0
      }
    ],
    "meta": {
      "version": 5
    }
  },
  "text_variables": {
    "FAB": "PCBWay",
    "FAB_PROFILE": "pcbway v1 (standard)"
  }
}
",
  "blinky/blinky.kicad_sch": "(kicad_sch
	(version 20250114)
	(generator "eeschema")
	(generator_version "9.0")
	(uuid "4f5822cc-7a53-41ef-b805-9521bf12e870")
	(paper "A4")
	(title_block
		(title "blinky")
		(date "2026-10-05")
		(rev "A")
		(comment 1 "PCBWay Standard rules, 6 layers")
	)
	(lib_symbols)
	(sheet_instances
		(path "/"
			(page "1")
		)
	)
)
",
}
`;
